[package]
name = "mini-rvc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hugging Face Candle 核心库 (Local Fork)
candle-core = { path = "../candle/candle-core" }
candle-nn = { path = "../candle/candle-nn" }
candle-onnx = { path = "../candle/candle-onnx" }

# 基础库
ndarray = "0.15.6"
hound = "3.5.1"
rubato = "0.14.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tract-onnx = "0.21.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 强制使用 rustls 避开 OpenSSL (C FFI)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

[[bin]]
name = "test_contentvec"
path = "src/test_contentvec.rs"

[[bin]]
name = "check_ops"
path = "src/check_ops.rs"
