[package]
name = "mini-rvc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hugging Face Candle 核心库 (Remote Fork)
candle-core = { git = "https://github.com/kingfree/candle.git", branch = "feat-onnx-ops-for-rvc", package = "candle-core" }
candle-nn = { git = "https://github.com/kingfree/candle.git", branch = "feat-onnx-ops-for-rvc", package = "candle-nn" }
candle-onnx = { git = "https://github.com/kingfree/candle.git", branch = "feat-onnx-ops-for-rvc", package = "candle-onnx" }

# 基础库
ndarray = "0.15.6"
hound = "3.5.1"
rubato = "0.14.1"
rustfft = "6.2.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tract-onnx = "0.21.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 强制使用 rustls 避开 OpenSSL (C FFI)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

[[bin]]
name = "test_contentvec"
path = "src/test_contentvec.rs"

[[bin]]
name = "check_ops"
path = "src/check_ops.rs"
