[package]
name = "mini-rvc-rust"
version = "0.1.0"
edition = "2021"
default-run = "mini-rvc-rust"

[dependencies]
# Hugging Face Candle 核心库 (Local Fork)
# Enable accelerate for Apple Accelerate framework (BLAS/LAPACK optimization)
candle-core = { path = "../candle/candle-core", features = ["metal", "accelerate"] }
candle-nn = { path = "../candle/candle-nn", features = ["metal"] }
candle-onnx = { path = "../candle/candle-onnx" }

# 基础库
ndarray = "0.16"
hound = "3.5.1"
rubato = "0.14.1"
rustfft = "6.2.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
tract-onnx = "0.21.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["multipart", "ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# 强制使用 rustls 避开 OpenSSL (C FFI)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

# ONNX Runtime (for development baseline and performance benchmark only)
# Used to validate correctness and establish performance targets
ort = { version = "2.0.0-rc.11", optional = true, features = ["half", "coreml"] }
half = "2.7.1"

[[bin]]
name = "test_contentvec"
path = "src/test_contentvec.rs"

[[bin]]
name = "check_ops"
path = "src/check_ops.rs"

[[bin]]
name = "test_mel"
path = "src/test_mel.rs"

[features]
default = []
# Enable ONNX Runtime backend (development/benchmark only, not for production deployment)
onnxruntime = ["ort"]

[[bin]]
name = "test_full"
path = "src/test_full.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
required-features = ["onnxruntime"]
